--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,23 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.5'
+}
+
 repositories {
     mavenCentral()
 }
 
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    
+    compile group: 'de.grundid.opendatalab', name: 'geojson-jackson', version: '1.0'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+    compile group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.11.3.RELEASE'
+    compile group: 'org.springframework', name: 'spring-core', version: '3.2.2.RELEASE'
+    compile group: 'org.springframework', name: 'spring-context', version: '3.2.2.RELEASE'
+    
 }
