--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://aws-schema.czgzmiuztpuj.us-east-1.rds.amazonaws.com:3306/pqrs_reporting_web
-spring.datasource.username=admin
-spring.datasource.password=vini1950
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://aws-schema.czgzmiuztpuj.us-east-1.rds.amazonaws.com:3306/pqrs_reporting_web
+jdbc.username=admin
+jdbc.password=vini1950
+hibernate.hbm2ddl.auto=none
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
