--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile group: 'org.aspectj', name: 'aspectjtools'
     compile group: 'org.apache.poi', name: 'poi', version: '3.16'
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.16'
+    compile('net.sourceforge.nekohtml:nekohtml:1.9.21')
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.springframework:spring-test:4.3.8.RELEASE")
     
