--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ jdbc.password=vini1950
 hibernate.hbm2ddl.auto=none
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
