Login Page Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
+spring.mvc.view.prefix: /
+spring.mvc.view.suffix: .jsp
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
